refactor(SoM): setOfMarks Overlays unify into `setOfMarksOverlays` function (#82)
* refactor(SoM): setOfMarks Overlays unify into `setOfMarksOverlays` function

* fix(overlay): focus false

* chore: test case

* fix(frames): better markers drawing

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,13 +6,13 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; connect-src 'self' *; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
+      content="default-src 'self'; connect-src 'self' *; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:"
     />
     <meta
       http-equiv="X-Content-Security-Policy"
-      content="default-src 'self'; connect-src 'self' *; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
+      content="default-src 'self'; connect-src 'self' *; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:"
     />
-    <title>UI TARS</title>
+    <title>UI-TARS Desktop</title>
     <style>
       .draggable-area {
           user-select: none;
