refactor(ipc-bridge): replace zutron to trpc-like ipc bridge (#94)
* refactor(ipc-bridge): replace zutron to trpc-like ipc bridge

* chore: replace window

* chore: ipc get permissions

* refactor: remove all dispatch

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -17,6 +17,7 @@
       .draggable-area {
           user-select: none;
           -webkit-app-region: drag;
+          cursor: grab;
       }
 
       .non-draggable-area {
