--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -17,6 +17,7 @@
       .draggable-area {
           user-select: none;
           -webkit-app-region: drag;
+          cursor: grab;
       }
 
       .non-draggable-area {
@@ -40,10 +41,38 @@
       body {
         overflow: hidden;
       }
+
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+
+      .loading-spinner {
+        display: inline-block;
+        width: 30px;
+        height: 30px;
+        border: 3px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+        border-top-color: #767676;
+        animation: spin 1s ease-in-out infinite;
+        margin: 20px;
+      }
+
+      .loading-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+
   </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div class="loading-container">
+        <div class="loading-spinner"></div>
+      </div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
