--- a/apps/agent-tars/src/renderer/index.html
+++ b/apps/agent-tars/src/renderer/index.html
@@ -38,7 +38,7 @@
         <div class="loading-spinner"></div>
       </div>
     </div>
-    <script type="module" src="/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
     <!-- DATA -->
   </body>
 </html>
