--- a/apps/agent-tars/src/renderer/index.html
+++ b/apps/agent-tars/src/renderer/index.html
@@ -5,7 +5,13 @@
     <title>Agent TARS</title>
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self' 'unsafe-inline' file: data: blob:; img-src 'self' file: data: blob:; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://fonts.googleapis.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net/npm/ https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; font-src 'self' https://cdnjs.cloudflare.com https://fonts.googleapis.com; worker-src 'self' blob:; connect-src 'self' https://cdn.jsdelivr.net/npm/ blob:"
+      content="default-src 'self' 'unsafe-inline' file: data: blob:;
+               img-src 'self' file: data: blob:;
+               style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://fonts.googleapis.com;
+               script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net/npm/ https://cdn.jsdelivr.net https://cdnjs.cloudflare.com;
+               font-src 'self' data: https://cdnjs.cloudflare.com https://fonts.googleapis.com;
+               worker-src 'self' blob:;
+               connect-src 'self' https://cdn.jsdelivr.net/npm/ blob:"
     />
     <style>
       @keyframes spin {
