--- a/apps/agent-tars/src/renderer/index.html
+++ b/apps/agent-tars/src/renderer/index.html
@@ -1,16 +1,25 @@
 <!doctype html>
-<html>
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Agent TARS</title>
     <meta
       http-equiv="Content-Security-Policy"
       content="
-        default-src 'self' 'unsafe-inline' file: data: blob:;
-        img-src 'self' file: data: blob:;
-        style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://fonts.googleapis.com;
-        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net/npm/ https://cdn.jsdelivr.net https://cdnjs.cloudflare.com;
-        font-src 'self' data: https://cdnjs.cloudflare.com https://fonts.googleapis.com;
+        default-src 'self' 'unsafe-inline' data: blob:;
+        img-src 'self' data: blob:;
+        style-src 'self' 'unsafe-inline'
+          https://cdn.jsdelivr.net
+          https://cdnjs.cloudflare.com
+          https://fonts.googleapis.com;
+        script-src 'self' 'unsafe-inline' 'unsafe-eval'
+          https://cdn.jsdelivr.net/npm/
+          https://cdnjs.cloudflare.com;
+        font-src 'self' data:
+          https://cdnjs.cloudflare.com
+          https://fonts.googleapis.com;
         worker-src 'self' blob:;
         connect-src
           'self'
@@ -19,7 +28,8 @@
           https://api.openai.com
           https://generativelanguage.googleapis.com
           https://*.googleapis.com
-          https://*.huggingface.co;
+          https://*.huggingface.co
+          https://your_huggingface_endpoint.aws.endpoints.huggingface.cloud;
       "
     />
     <style>
@@ -27,7 +37,6 @@
         0% { transform: rotate(0deg); }
         100% { transform: rotate(360deg); }
       }
-
       .loading-spinner {
         display: inline-block;
         width: 30px;
@@ -38,7 +47,6 @@
         animation: spin 1s ease-in-out infinite;
         margin: 20px;
       }
-
       .loading-container {
         display: flex;
         justify-content: center;
@@ -54,6 +62,5 @@
       </div>
     </div>
     <script type="module" src="./src/main.tsx"></script>
-    <!-- DATA -->
   </body>
 </html>
