--- a/apps/agent-tars/src/renderer/index.html
+++ b/apps/agent-tars/src/renderer/index.html
@@ -23,13 +23,12 @@
         worker-src 'self' blob:;
         connect-src
           'self'
-          https://cdn.jsdelivr.net/npm/
-          blob:
           https://api.openai.com
           https://generativelanguage.googleapis.com
           https://*.googleapis.com
           https://*.huggingface.co
-          https://your_huggingface_endpoint.aws.endpoints.huggingface.cloud;
+          https://*.hf.space
+          blob:;
       "
     />
     <style>
